--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tawfiq Hassan Nayem</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+ <section>
+<div class="half-width"><h1>Welcome to <br> <span class="name-highlighter">Tawfiq Hassan</span> Website</h1>
+    <h3>Font-End Devloper</h3>
+    <p>Hi! I am professional web designer with HTML5 & CSS3. I can design your site with low cost and short time. So, Hire me. I Always try to explore amazing things.
+   </p></div>
+ <div class="half-width">
+     <img src="images/tawfiq-bg1.jpg" alt="" srcset="">
+ </div>
+
+</section>
+            
+
+
+
+
 </body>
 </html>
