--- a/index.html
+++ b/index.html
@@ -1,30 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tawfiq Hassan Nayem</title>
+  <title>Tawfiq Hassan Nayem</title>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
-<link rel="stylesheet" href="style.css">
-</head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="style.css">
+ </head>
 <body>
- <section>
-<div class="half-width"><h1>Welcome to <br> <span class="name-highlighter">Tawfiq Hassan</span> Website</h1>
-    <h3>Font-End Devloper</h3>
-    <p>Hi! I am professional web designer with HTML5 & CSS3. I can design your site with low cost and short time. So, Hire me. I Always try to explore amazing things.
-   </p></div>
- <div class="half-width">
-     <img src="images/tawfiq-bg1.jpg" alt="" srcset="">
- </div>
+
+<section class="top-banner">
+    <div class="half-width"><h1>Welcome to <br> <span class="name-highlighter">Tawfiq Hassan</span> Website</h1>
+        <h3>Front-End Devloper</h3>
+        <p>Hello! I’m <span class="name-highlighter"><b> Tawfiq Hassan Nayem,</b></span> a self-taught Designer with over two months work experience in HTML, CSS. I'm a Asia based Frontend Web Developer. So, Hire me if you need a simple website. I Always try to explore amazing things.
+    </p>
+    <a class="link-button" href="https://www.linkedin.com/in/tawfiqhassannayem" target="_blank" rel="noopener noreferrer">HIRE ME</a>
+    </div>
+    <div class="half-width">
+        <img src="images/tawfiq-bg1.jpg" alt="" srcset="">
+    </div>
+</section>
+                
+<section class="Dream-To-Be">
+<div class="half-width">
+    <img src="images/tawfiq-bg2.jpg" alt="" srcset="">
+</div>
+<div class="half-width">
+    <h2>Dream To Be</h2>
+    <h3>Become a web developer</h3>
+    <p>I already learnerd basic HTML and CSS. <br> I can build any simple website. I can even tech my <br> mom/dad/gf how to make any simple website. <br> My goal is to build 3 website and learn advance topics.
+    </p>
+    <a class="link-button" href="#" target="_blank" rel="noopener noreferrer">DOWNLOAD RESUME</a>
+</div>
+</section>
+
+<section class="Experience">
+    <div id="full-stack" class="half-width Single-Experience">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="name-highlighter"> 2022 | Pro Level Devloper</h3>
+        <p>-------------</p>
+    </div>
+    <div class="half-width Single-Experience">
+        <h2>Baby Web Developer</h2>
+        <h3 class="name-highlighter"> 2021 | Web Development learner</h3>
+    </div>
 
 </section>
-            
-
-
 
 
 </body>
