first-website-done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Tawfiq Hassan Nayem</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <link rel="stylesheet" href="style.css">
  </head>
 <body>
@@ -20,13 +21,13 @@
     <a class="link-button" href="https://www.linkedin.com/in/tawfiqhassannayem" target="_blank" rel="noopener noreferrer">HIRE ME</a>
     </div>
     <div class="half-width">
-        <img src="images/tawfiq-bg1.jpg" alt="" srcset="">
+        <img src="images/my-bg1.png" alt="" srcset="">
     </div>
 </section>
                 
 <section class="Dream-To-Be">
 <div class="half-width">
-    <img src="images/tawfiq-bg2.jpg" alt="" srcset="">
+    <img src="images/my-bg22.png" alt="" srcset="">
 </div>
 <div class="half-width">
     <h2>Dream To Be</h2>
@@ -38,18 +39,45 @@
 </section>
 
 <section class="Experience">
+    <h2 class="exp">Experiences</h2>
     <div id="full-stack" class="half-width Single-Experience">
         <h2>Full Stack Web Developer</h2>
         <h3 class="name-highlighter"> 2022 | Pro Level Devloper</h3>
-        <p>-------------</p>
+        <p>I am master of HTML and CSS. I know everything to make a website and how to design it. I even know the deploy server.
+        </p>
     </div>
-    <div class="half-width Single-Experience">
+    <div id="Baby-Dev" class="half-width Single-Experience">
         <h2>Baby Web Developer</h2>
         <h3 class="name-highlighter"> 2021 | Web Development learner</h3>
+        <p>
+            Started learning with Programming Hero.
+            Basic to advanced from them and started journey as a remote developer.
+        </p>
     </div>
-
 </section>
 
+<section>
+    <div class="half-width">
+        <h3>My Social Media Buttons</h3>
+<!-- Add font awesome icons -->
+<a href="https://www.facebook.com/TAWFIQ.HASSAN.NAYEM.0/" target="_blank" class="fa fa-facebook"></a>
+<a href="#" target="_blank" class="fa fa-twitter"></a>
+<a href="https://www.linkedin.com/in/tawfiqhassannayem" target="_blank" class="fa fa-linkedin"></a>
+<a href="https://www.youtube.com/channel/UC2r9I531GIir-I0v_msqaJQ" target="_blank" class="fa fa-youtube"></a>
+<a href="https://www.instagram.com/tawfiqhassannayem/" target="_blank" class="fa fa-instagram"></a>
+<a href="https://www.pinterest.com/tawfiqhassannayem/" target="_blank" class="fa fa-pinterest"></a>
+    </div>
+    <div class="half-width">
+        <h3>Contact</h3>
+        <p>Email: tawfiqhassan018@gmail.com <br> <br> Phone: +880 15186716** <br>
+            <Address>
+Tongi <br> Dhaka,Bangladesh.
+            </Address></p>
+    </div>
+</section>
+
+
+<footer><p>© Tawfiq 2021 , All rights reserved.</p></footer>
 
 </body>
 </html>
