--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
  </head>
 <body>
 
+    <!-- Messenger Chat Plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat Plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "2067122926878547");
+      chatbox.setAttribute("attribution", "biz_inbox");
+
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v11.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+
 <section class="top-banner">
     <div class="half-width"><h1>Welcome to <br> <span class="name-highlighter">Tawfiq Hassan</span> Website</h1>
         <h3>Front-End Devloper</h3>
@@ -75,7 +103,6 @@ Tongi <br> Dhaka,Bangladesh.
             </Address></p>
     </div>
 </section>
-
 
 <footer><p>© Tawfiq 2021 , All rights reserved.</p></footer>
 
